# JSRAID

./: Makefile.in  README  acinclude.m4  configure  configure.ac  make.build  make.build.in
doc/: jraid.txt
src/: TODO
src/include/: bdstruct.h  configure.h  configure.h.in  dev_manager.h  dstruct.h  dv.h  jd-ioctl.h  jdstruct.h  lbd-version.h.in  lbd.h  lbdcache.h  libjd-targets.h  libjraid.h  lp.h  metadata-out.h  test-ioctl.h  tools.h  xlate.h
src/kernel/jraid/: Makefile  ioctl_us.h  jraid-bufio.c  jraid-bufio.h  jraid-dv.c  jraid-dv.h  jraid-io.c  jraid-io.h  jraid-lbd.c  jraid-lbd.h  jraid-main.c  jraid-mapper.h  jraid-pool.c  jraid-pool.h  jraid-sys.c  jraid-sys.h  jraid-thread.c  jraid-thread.h
src/kernel/jraid/persistent-data/: jraid-block-manager.c  jraid-block-manager.h  jraid-btree-remove.c  jraid-btree.c  jraid-btree.h  jraid-space-map-common.c  jraid-space-map-common.h  jraid-space-map-disk.c  jraid-space-map-metadata.c  jraid-space-map-metadata.h  jraid-space-map.h  jraid-transaction-manager.c  jraid-transaction-manager.h
src/kernel/lbdc/: README
src/lbdc/: Makefile  lbd.c  libsraid.h  sraid_common.c
src/lib/: Makefile.in  command.c
src/lib/activate/: activate.c  activate.h  dev_manager.c  dev_manager.h
src/lib/bdstruct/: bdstruct.h  btree.c  str_list.c
src/lib/cache/: lbdcache.c  lbdcache.h
src/lib/commands/: toolcontext.c  toolcontext.h
src/lib/config/: config.c  config.h
src/lib/device/: bcache-utils.c  bcache.c  bcache.h  dev-cache.c  dev-cache.h  device.h  xlate.h
src/lib/format_text/: format-text.c  format-text.h  layout.h  text-label.c
src/lib/label/: label.c  label.h
src/lib/locking/: locking.c  locking.h
src/lib/metadata/: dv.h  lbd.c  lbd.h  lbd_manip.c  lp.c  lp.h  metadata-out.h  metadata.c  metadata.h
src/lib/misc/: crc.c  crc.h
src/libjraid/: .export.sym  Makefile.in  libjd-common.c  libjd-common.h  libjd-config.c  libjd-file.c  libjraid.h
src/libjraid/dstruct/: dstruct.h  list.c
src/libjraid/ioctl/: libjd-iface.c  libjd-targets.h
src/libjraid/jdstruct/: hash.c  jdstruct.h  list.c
src/libjraid/misc/: jd-ioctl.h
src/libjraid/mm/: pool-fast.c
src/tools/: Makefile.in  README  args.h  command.c  command.h  commands.h  common.h  dvcreate.c  errors.h  lbd-toollib.c  lbd-toollib.h  lbd.c  lbdcmdline.c  lbdcmdline.h  lbdpool.c  lbdself.c  vals.h
src/tools/lbd/: Makefile.in  args.h  cmds.h  command-lines.in  command.c  command.h  commands.h  commom.h  common.h  dvcreate.c  dvremove.c  errors.h  lbd-toollib.c  lbd-toollib.h  lbd.c  lbdcmdline.c  lbdcmdline.h  lbdpool.c  lbdself.c  license.inc  vals.h
test/ioctl/: ioctl.c
test/jraid/ioctl/: Makefile  ioctl.c
test/misc/biosubmit/: Makefile  README  blkdev-sys.c  blkdev-sys.h  ioctl.c  submit.c
test/misc/listhandle/: Makefile  cp_list.c
